k8s/ship/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ship-operator
  labels:
    name: operator
    gateway-access: allowed
