k8s/ship/shipv1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ship-operator
  labels:
    name: operator
